Only enable SYNC extension fences and the Present extension along with DRI3

This avoids some trouble with the Gallium nine state tracker, which uses
the Present extension even when DRI3 is disabled.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89772

Reviewed-by: Alex Deucher <alexander.deucher@amd.com>